--- a/boast/build.gradle
+++ b/boast/build.gradle
@@ -1,15 +1,17 @@
 apply plugin: 'com.android.library'
 apply plugin: 'maven'
 
+// gradlew clean build generateRelease
+
 android {
-    compileSdkVersion 22
-    buildToolsVersion "22.0.1"
+    compileSdkVersion 23
+    buildToolsVersion "23.0.1"
 
     defaultConfig {
         minSdkVersion 9
-        targetSdkVersion 22
+        targetSdkVersion 23
         versionCode 1
-        versionName "0.2.5"
+        versionName "0.3.0"
     }
 
     buildTypes {
@@ -30,7 +32,7 @@ dependencies {
 
 def groupId = 'com.moonbloom'
 def artifactId = 'boast'
-def version = '0.2.5'
+def version = '0.3.0'
 
 def localReleaseDest = "${buildDir}/release/${version}"
 
